package org.example;

public interface Data {
}
