package org.example;

public class FileIO implements Data {
}
