package org.example;

public class Season {
}
