package org.example;

public class StreamingService {
}
